demo/src/main/resources/com/journalfrontend/styles.css
.root {
    -fx-font-size: 18.5pt;
    -fx-font-family: "Serif";
    -fx-base: #ffe4aa;
    -fx-background: #ffd0c9;
    -fx-border-width: 2px;
    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.8), 0, 0, 0, 0);

}


.primary-button {
    -fx-background-color: #ff5733;
    -fx-text-fill: white;
    -fx-pref-width: 400px;
}

.primary-button:hover {
    -fx-background-color: #ff6c4a;
}

.button {
    -fx-background-color: #ff5733;
    -fx-text-fill: white;
}

.button:hover {
    -fx-background-color: #ff6c4a;
}

.list-cell {
    -fx-background-color: #ffb5aa, #ffc1b8;
    -fx-background-insets: 0, 1 1 1 1;
    -fx-alignment: right;
    -fx-text-fill: rgb(34, 34, 34);
}

.list-cell .scroll-bar:vertical {
    -fx-background-color: #ffa08a;
    -fx-border: #fa7e63;
    -fx-base: #ffa08a;
}

.list-cell:filled {
    -fx-background-color: #ff9d88;
    -fx-background-insets: 5, 5;
}

.list-cell:filled:selected {
    -fx-background-color: #fa7a5d;
}

.list-cell:filled:hover {
    -fx-background-color: #fb8c73;
}

.list-cell:empty:selected {
    -fx-background-color: #ffc1b8;
}

.list-cell:empty:hover {
    -fx-background-color: #ffc1b8;
}

.list-cell:empty {
    -fx-opacity: 0;
}

.list-view .scroll-bar:horizontal {
    -fx-scale-x: 0;
}

.text-field {
    -fx-font-size: 18pt;
}

.text-area {
    -fx-font-size: 18pt;
}

.text-area .content .text {
    -fx-text-alignment: left;
}

.text-area .scroll-bar:vertical {
    -fx-background-color: #ffa08a;
    -fx-border: #fa7e63;
    -fx-base: #ffa08a;
}

.entry-padding {
    -fx-padding: 10 10 10 10;
}

.title {
    font-size: 36px;
    -fx-font-family: "Serif";
    -fx-font-weight: bold;
    -fx-text-fill: #000000;
}

